Fixed overlap for Derivative thumb expander in index page. Also fixed padding for non-expandable elements.

--- a/source/demyo-web/src/main/webapp/css/demyo/demyo.cards.less
+++ b/source/demyo-web/src/main/webapp/css/demyo/demyo.cards.less
@@ -112,6 +112,12 @@
 	
 	&--thumb {
 		text-align: center;
+		max-width: 16em;
+		padding: 8px;
+		
+		&.expandable {
+			padding: 0;
+		}
 	}
 }
 
