--- a/source/demyo-web/src/main/webapp/css/demyo/demyo.common.less
+++ b/source/demyo-web/src/main/webapp/css/demyo/demyo.common.less
@@ -106,6 +106,11 @@ figure.thumb {
 		font-size: inherit;
 	}
 	
+	.expandable & {
+		padding-left: 2em;
+		padding-right: 2em;
+	}
+	
 	&__expander {
 		position: absolute;
 		top: 0;
